app/assets/stylesheets/ecosystems.scss
/* ... */
.btn-info {
  background: linear-gradient(180deg, $color-grey-light 0%, $color-purple-light 100%);
  &:hover,
  &:active,
  &:focus {
    background: linear-gradient(180deg, $color-grey-light 0%, $color-purple-light 33%);
  }
}

.btn-light {
  background: linear-gradient(180deg, $color-grey-light 0%, $color-grey 100%);
  &:hover,
  &:active,
  &:focus {
    background: linear-gradient(180deg, $color-grey-light 0%, $color-grey 33%);
  }
}

.btn-dark {
  background: linear-gradient(180deg, $color-grey-dark 0%, $color-black 100%);
  &:hover,
  &:active,
  &:focus {
    background: linear-gradient(180deg, $color-grey-dark 0%, $color-black 33%);
  }
}

.btn-primary,
.btn-secondary,
.btn-success,
.btn-danger,
.btn-warning,
.btn-info,
.btn-light,
.btn-dark {
  border: 0;
  &:focus {
    outline: 3px solid $color-orange;
  }
}

.btn-primary,
.btn-success,
.btn-danger,
.btn-warning,
.btn-info,
.btn-dark {
  &:active {
    color: rgba($color-white, 0.8) !important;
  }
}

.alert {
  border: 0;
}

.alert-dark {
  background-color: $color-grey-dark;
  color: $color-white;
	a {
		color: $color-white;
	}
}

hr {
  border-top: 3px solid $color-purple-light;
}

.container {
  @include media-breakpoint-down(md) {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

.text-decoration-hover {
  text-decoration: none;
  &:hover{
    text-decoration: underline;
  }
}

.dark-section {
  background-color: $color-purple-dark;
  color: $color-white;
  .text-muted {
    color: rgba(255,255,255,0.666) !important;
  }
  a {
    color: $color-white;
    &:hover,
    &:active,
    &:focus, 
    &:visited {
      color: $color-white;
    }
  }
}

.grey-grad-bg  {
  background: linear-gradient(180deg, $color-white 0%, $color-grey-light 100%);
}

.ecosystems-pattern {
  background-color: lighten($color-purple-light, 8%);
  background-image: asset-url('ecosystems-pattern.svg');
  background-repeat: repeat;
  background-size: calc(696px/2) calc(238px/2);
  background-attachment: fixed;
}

.purple-grad-bg  {
  background-color: $color-purple-dark;
  background: linear-gradient(0deg, $color-purple-dark 0%, $color-purple 50%);
  color: $color-white;
  .text-muted {
    color: rgba(255,255,255,0.666) !important;
  }
}

/* Put an icon next to a link and make the whole lockup clickable */
.link-with-icon {
  display: inline-flex;
  align-items: flex-start;    /* top-align icon and first line of text */
  gap: 0.5em; 
                   
  .link-with-icon__icon {
    flex: 0 0 18px; /* shorthand for flex-grow:0, flex-shrink:0, flex-basis:18px */
    width: 18px;
    height: 18px;
    margin-top: 4px;
  }

  .link-with-icon__text {
    display: block;
    overflow-wrap: break-word; 
    word-break: break-word; 
  }
  &:hover,
  &:active,
  &:focus {
    .link-with-icon__text {
      text-decoration: underline;
      color: $color-purple-dark;
    }
  }
}

body {
  font-optical-sizing: auto;
}

.header__global {
  width: 100%;
}

.header__global__site-logo-wrapper {
  h1 {
    font-size: 0;
    line-height: 0;
    margin: 0;
  }
}

.site-logo {
  font-size: 0;
  line-height: 0;
  color: transparent;

  background-image: asset-url('ecosystems-logo.svg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  display: inline-block;

  width: 155px;
  height: 30px;
}

.site-logo--white {
	background-image: asset-url('ecosystems-logo-white.svg');
  width: 246px;
  height: 50px;
}

.site-name {
  line-height: 50px;
  display: inline-block;
  vertical-align: middle;
  font-size: 40px;
  font-weight: 400;
  color: $color-purple;
  padding-top: 70px;
}

.header__global__menu-link {
  @include spesh-link();
  @include font-size(1rem);
  .bi {
    display: inline-block;
    transition: transform 0.35s ease-out; //same time as bootstrap's animation
    transform-origin: center;
  }
}

.header__global__menu-link[aria-expanded="true"] {
  .bi {
    transform: rotateX(180deg);
  }
}

.header__global__menu__category {
  margin-bottom: 0.5rem;
}

.header__global__menu__category-title {
  display: inline;
  @include font-size(1rem);
}

.header__global__menu__category-links {
  @include font-size(1rem);
  display: inline;
  padding-left: 1rem;
  li {
    display: inline;
    margin-right: 1rem;
  }
  a {
    color: $color-black;
    &:hover,
    &:active,
    &:focus {
      color: $color-purple-dark;
    }
    &.active {
      text-decoration: none;
      color: $color-purple-dark;
    }
  }
}

.header__local {
  border-top: 1px solid $color-grey;
  margin-top: 2rem;
}

.header__local__sitename {
  color: $color-purple-dark;
}

.header__local__homelink {
  color: $color-purple-dark;
  text-decoration: none;
  &:hover,
  &:active,
  &:focus {
    color: $color-black;
  }
}

.header__local__description {
  @include font-size(1rem);
}

.header__local__navigation {
  margin-left: -1rem;
  @include media-breakpoint-up(lg) {
    margin-left: 0;
  }
  a {
    @include spesh-link();
    padding: 0;
  }
  li {
    padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
  }

.nav {
	@include media-breakpoint-up(lg) {
	  justify-content: end;
	}
  }
}

.table a {
  @include spesh-link();
}

/*  Header */
.header {
  padding: 2em 0;
}

/*  Footer */
.footer {
  padding: 2em 0;
  margin-top: 4em;
}

.footer-links {
  margin-top: 1rem;
  @include media-breakpoint-up(md) {
    text-align: right;
  }
  a {
    text-decoration: none;
  }
  li {
    margin-bottom: 0.25rem;
  }
}

.footer-icons {
  margin-top: 1em;
  a {
    margin: 0 0.5em;
    text-decoration: none;
  }
}

.lead {
  @include font-size(1.625rem);
}

/* Homepage */

/* Hero */
.hero {
  .lead {
    max-width: 42rem;
    margin: 0 auto;
  }
}

.spesh-link {
  @include spesh-link();
}

.spesh-link--hover-only {
  box-shadow: inset 0 -0.3em 0 transparentize($color-green, 1);
}

.label {
  display: block;
  @include font-size(0.875rem);
}

.block-link {
  /* class to make cards fully clickable */
  text-decoration: none;
}
/* ... */

